DONE: basic functionality. There is some strange behavior

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ configure_file(input_file.txt ${CMAKE_CURRENT_BINARY_DIR}/input_file.txt COPYONL
 add_executable(server server.c)
 add_executable(client client.c)
 add_executable(for_tests for_tests.c)
+add_executable(for_tests_sig_handle for_tests_sig_handle.c)
