In the middle of the work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,10 @@ configure_file(input_file.txt ${CMAKE_CURRENT_BINARY_DIR}/input_file.txt COPYONL
 
 add_executable(server server.c)
 add_executable(client client.c)
+
+add_executable(server2 server2.c)
+add_executable(client2 client2.c)
+
 add_executable(for_tests for_tests.c)
 add_executable(for_tests_sig_handle for_tests_sig_handle.c)
+add_executable(daemon_exp daemon_exp.c)
