Before add support for transfering big files on server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,15 @@ project(C_Client_Server C)
 
 set(CMAKE_C_STANDARD 99)
 
-configure_file(input_file.txt ${CMAKE_CURRENT_BINARY_DIR}/input_file.txt COPYONLY)
-
+#set(INPUT_FILE_NAME input_file_little.txt)
+set(INPUT_FILE_NAME input_file.txt)
+configure_file(${INPUT_FILE_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${INPUT_FILE_NAME} COPYONLY)
 
 add_executable(server server.c)
 add_executable(client client.c)
 
 add_executable(fread_exp fread_exp.c)
+add_executable(array_exp array_exp.c)
 
 #add_executable(server2 server2.c)
 #add_executable(client2 client2.c)
